# standards-intelligence-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: README.md
demos/gb-vehicle-safety/: README.md  answer-packets.synthetic.jsonl  coverage-report.json  document-families.synthetic.jsonl  provisions.synthetic.jsonl  source-manifest.jsonl  source-watchlist.synthetic.jsonl
docs/: answer-contract.md  architecture.md  change-intelligence.md  compliance-workflow.md  pi-agent-contract.md  pi-agent-runner.md  private-source-testing.md  roadmap.md  source-access-policy.md
examples/: answer-packet.example.json  change-packet.example.json  compliance-checklist.example.json  document-family.example.json  private-corpus-report.example.json  private-provision-index.example.jsonl  provision.example.json  skill-run-log.example.json  source-manifest.example.jsonl  source-watchlist.example.json  task-packet.example.json
schemas/: answer-packet.schema.json  change-packet.schema.json  compliance-checklist.schema.json  coverage-report.schema.json  document-family.schema.json  private-corpus-report.schema.json  private-provision-index-record.schema.json  provision.schema.json  skill-run-log.schema.json  source-manifest.schema.json  source-watchlist.schema.json  task-packet.schema.json
skills/: README.md  index.json
skills/change-impact/: SKILL.md
skills/compliance-checklist/: SKILL.md
skills/provision-compiler/: SKILL.md
skills/regulatory-answer/: SKILL.md
skills/source-intake/: SKILL.md
tests/: test_cli.py
(+2 files in other folders)
