[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "standards-intelligence-skills"
version = "0.1.0"
description = "面向 PI-agent workflow 的轻量级标准智能 skill pack。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jlcbk" }]
dependencies = []

[project.scripts]
standards-skills = "standards_intelligence_skills.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
